--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     ]
   },
   "dependencies": {
+    "contentlayer": "^0.3.4",
+    "date-fns": "^3.3.1",
     "next": "14.1.0",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
