--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
     ]
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
