--- a/.github/workflows/testPathsIgnore.yml
+++ b/.github/workflows/testPathsIgnore.yml
@@ -2,33 +2,14 @@ name: Test paths-ignore
 on:
   push:
     branches:
-      - master
+      - New-branch-4
     paths-ignore:
       - '**.md'
       - '.github/**'
 
 jobs:
-  log-the-inputs:
+  log-something:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Commit SHA selected: $COMMIT_SHA"
-          echo "Branch selected: ${{github.ref}}"
-          echo "github.sha: ${{github.sha}}"
-        env:
-          COMMIT_SHA: ${{ inputs.commitSha }}
-
-      - name: Validate input parameters
-        run: |
-          if [ -z "${{ inputs.commitSha }}" ]; then
-            echo "Using current commit SHA: ${{ github.sha }}"
-            echo "REF_TO_USE=${{ github.sha }}" >> $GITHUB_ENV
-          else
-            echo "Using provided commit SHA: ${{ inputs.commitSha }}"
-            echo "REF_TO_USE=${{ inputs.commitSha }}" >> $GITHUB_ENV
-          fi
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ env.REF_TO_USE }}
+          echo "I'm running!!!!!"
