--- a/.github/workflows/testManualTrigger.yml
+++ b/.github/workflows/testManualTrigger.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - run: |
           echo "Commit SHA selected: $COMMIT_SHA"
-          echo "Branch selected:: ${{github.ref}}"
+          echo "Branch selected: ${{github.ref}}"
           echo "github.sha: ${{github.sha}}"
         env:
           COMMIT_SHA: ${{ inputs.commitSha }}
